--- a/views/ejs/pages/index.ejs
+++ b/views/ejs/pages/index.ejs
@@ -1,5 +1,5 @@
 <%- include("../partials/header.ejs") %>
 <%- include("../partials/form.ejs") %>
-<%- include("../partials/list.ejs"), {response} %>
+<%- include("../partials/list.ejs") %>
 <%- include("../partials/chat.ejs") %>
 <%- include("../partials/footer.ejs") %>
